# wdi-etl-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  task_list.md
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DECISIONS.md  DESIGN.md
scripts/: clean.py  extract.py
