[project]
name = "wdi-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "polars>=1.42.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
]
